# fast-snippets

./: .gitignore  .travis.yml  AUTHORS.md  Makefile  README.md  pyproject.toml  settings.ini  tox.ini
.github/: ISSUE_TEMPLATE.md
_docs/: index.html  index.html.md  sitemap.xml
_docs/API/: 0-health.html  0-health.html.md
_proc/: index.ipynb  sidebar.yml.bak
_proc/API/: 0-health.ipynb
_proc/_docs/: index.html
nbs/: index.ipynb  nbdev.yml
nbs/API/: 0-health.ipynb
src/: pyproject.toml
src/fast_snippets/: __init__.py  __pre_init__.py  _modidx.py  health.py
tests/: __init__.py  test_fast_snippets.py
