[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_snippets"
version = "0.1.0"
description = "Fast Snippets for Pytorch, Computer Vision, Deep Learning and Python in General"
readme = "README.rst"
authors = [
  {name = "Yeshwanth Reddy", email = "1992chinna@gmail.com"}
]
maintainers = [
  {name = "Yeshwanth Reddy", email = "1992chinna@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "nbdev",
  "twine>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sizhky/fast_snippets/issues"
changelog = "https://github.com/sizhky/fast_snippets/blob/master/changelog.md"
homepage = "https://github.com/sizhky/fast_snippets"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
fs = "fast_snippets:cli"

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

